gcc/testsuite/rust/rustc/ui/structs/struct-fields-shorthand-unresolved.rs
struct Foo {
    x: i32,
    y: i32
}

fn main() {
    let x = 0;
    let foo = Foo {
        x,
        y // { dg-error ".E0425." "" { target *-*-* } }
    };
}

